--- a/show_sudo.yaml
+++ b/show_sudo.yaml
@@ -2,6 +2,10 @@
   hosts: all
   tasks:
   - name : Check sudo
+    #Try these settings if the playbook hangs
+    #ignore_errors: True
+    #async: 60
+    #poll: 60
     shell: sudo -l | grep /bin/su | sed 's/\/bin\/su/xxxx "{{ inventory_hostname }}"/g' | awk {'print $2, $4'}
     register: sudo
   - debug: var=sudo.stdout_lines
